[package]
name = "wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
iced.features = ["debug", "lazy"]
log.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
step1 = { path = "../step1"}
step2 = { path = "../step2"}
step3 = { path = "../step3"}